--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "aiofiles>=24.1.0",
     "docling>=2.34.0",
     "einops>=0.8.1",
+    "eunjeon>=0.4.0",
     "fastapi>=0.115.12",
     "fastembed>=0.7.0",
     "google-generativeai>=0.8.5",
+    "kiwipiepy>=0.21.0",
+    "konlpy>=0.6.0",
     "langchain>=0.3.25",
     "langchain-community>=0.3.21",
     "langchain-experimental>=0.3.4",
@@ -21,6 +24,7 @@ dependencies = [
     "llama-index-llms-gemini>=0.5.0",
     "llama-index-retrievers-bm25>=0.5.2",
     "llama-index-vector-stores-qdrant>=0.6.0",
+    "mecab-python3>=1.0.10",
     "openai>=1.82.1",
     "pdfplumber>=0.11.6",
     "pip>=25.1.1",
@@ -31,6 +35,7 @@ dependencies = [
     "qdrant-client>=1.12.1",
     "rank-bm25>=0.2.2",
     "sentence-transformers>=4.1.0",
+    "spacy>=3.8.7",
     "stemmer>=0.0.4",
     "uvicorn>=0.34.3",
 ]
