--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,11 @@ dependencies = [
     "langchain-community>=0.3.21",
     "langchain-experimental>=0.3.4",
     "langchain-huggingface>=0.2.0",
+    "langchain-mcp-adapters>=0.1.7",
+    "langchain-mcp-tools>=0.2.4",
+    "langchain-openai>=0.3.21",
     "langchain-qdrant>=0.2.0",
+    "langgraph>=0.4.8",
     "llama-index>=0.12.40",
     "llama-index-embeddings-huggingface>=0.5.4",
     "llama-index-llms-gemini>=0.5.0",
@@ -28,6 +32,7 @@ dependencies = [
     "openai>=1.82.1",
     "pdfplumber>=0.11.6",
     "pip>=25.1.1",
+    "postgres-mcp>=0.3.0",
     "pymupdf>=1.26.0",
     "pypdf>=5.6.0",
     "pypdfium2>=4.30.1",
@@ -38,4 +43,5 @@ dependencies = [
     "spacy>=3.8.7",
     "stemmer>=0.0.4",
     "uvicorn>=0.34.3",
+    "websockets>=15.0.1",
 ]
