--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ langchain-openai==0.0.5
 langchain-google-genai==0.0.6
 langchain-qdrant==0.0.1
 langchain-huggingface==0.0.5
+langchain-mcp-adapters
+langgraph
+mcp==1.0.0
+anyio
